fix clothing grid product sizes hover alignment

--- a/client/src/components/ProductSlider/ProductSlider.css
+++ b/client/src/components/ProductSlider/ProductSlider.css
@@ -2,6 +2,7 @@
     width: 100%;
     cursor: pointer;
     overflow: hidden;
+    position: relative;
     margin-bottom: 2.7rem;
 }
 
@@ -29,7 +30,8 @@
     width: 90%;
     background-color: #fff;
     position: absolute;
-    bottom: 135px;
+    /* top: 70%; */
+    bottom: 50px;
     z-index: 10;
     padding: 15px 0;
     box-shadow: 10px 8px 15px 10px rgba(0, 0, 0, 0.2);
